M-Secure Web App

--- a/src/app/dev/dev.component.html
+++ b/src/app/dev/dev.component.html
@@ -1,4 +1,4 @@
-<div class="fx-cm w-100 fx-ctr g2 dev-main">
+<div class="fx-cm fx-ctr g2 dev-main">
     <div class="header">
         <div class="box fx-cm fx-ctr">
             <span>M-Secure</span>
@@ -7,7 +7,48 @@
     <div class="logo">
         <img src="m_secure_logo.png" alt="m_secure_logo">
     </div>
-    <div class="dev-days">
-        <span>In development for {{noOfDays}} days</span>
+    <div class="dev-days fx-cm fx-ctr">
+        <span>Days in Development</span>
+        <i>{{outputDays}}</i>
+    </div>
+    <div class="app-info w-90">
+        <span class="fx-rw g_4 fx-wp fx-ctr"><div>Generate</div><div>Store</div>&<div>Share</div> your passwords<i>securely</i>and<i>locally</i></span>
+    </div>
+    <div class="msg fx-cm fx-ctr">
+        <span><b><i>"Your data is only yours"</i></b></span>
+        <div id="demo"></div>
+    </div>
+    <div class="promo fx-cm fx-ctr g1">
+        <span><strong>Built completely on Open Source Technologies</strong></span>
+        <div class="fx-rw fx-ctr g_4">
+            <a href="https://capacitorjs.com/" target="_blank" rel="noreferrer">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/capacitor/capacitor-original.svg" alt="capacitor" width="35" height="35" />
+            </a>
+            <a href="https://angular.io" target="_blank" rel="noreferrer">
+                <img src="https://angular.io/assets/images/logos/angular/angular.svg" alt="angular" width="40" height="40" />
+            </a>
+            <a href="https://ionicframework.com" target="_blank" rel="noreferrer"> 
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/ionic/ionic-original.svg" alt="ionic" width="40" height="40" />
+            </a>
+            <a href="https://material.angular.io/" target="_blank" rel="noreferrer">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/angularmaterial/angularmaterial-original.svg" alt="material" width="40" height="40" />
+            </a>
+            <a href="https://sass-lang.com" target="_blank" rel="noreferrer"> 
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/sass/sass-original.svg" alt="scss" width="40" height="40" />
+            </a>
+            <a href="https://developer.android.com" target="_blank" rel="noreferrer"> 
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/android/android-plain-wordmark.svg" alt="android-studio" width="40" height="40" /> 
+            </a>
+            <a href="https://firebase.google.com/" target="_blank" rel="noreferrer">
+                <img src="https://www.vectorlogo.zone/logos/firebase/firebase-icon.svg" alt="firebase" width="40" height="40" />
+            </a>
+        </div>
+    </div>
+    <div class="outro">
+        <span><i>Coming soon....</i></span>
+    </div>
+    <div class="contact fx-cm fx-ctr">
+        <span>Share thoughts and Request features at</span>
+        <span>no.reason517&#64;passinbox.com</span>
     </div>
 </div>
