--- a/src/app/dev/dev.component.scss
+++ b/src/app/dev/dev.component.scss
@@ -1,6 +1,6 @@
 .dev-main {
     .header {
-        padding-top: 1.5em;
+        padding-top: 1em;
         font-family: var(--font1);
         color: var(--text1);
         font-size: xxx-large;
@@ -12,16 +12,68 @@
             backdrop-filter: var(--bckFiltr);
             border: 1px solid var(--secondary);
         }
+        .box:active {
+            box-shadow: 0px 0px 20px 10px var(--secondary);
+        }
+        .box:hover {
+            box-shadow: 0px 0px 20px 10px var(--secondary);
+        }
     }
     .logo {
         img {
-            height: 15em;
-            filter: drop-shadow(3px 3px 3px var(--secondary));
+            height: 13em;
+            animation: 2s breathe infinite;
         }
     }
     .dev-days {
         font-family: var(--font2);
         color: var(--text1);
+        span {
+            font-size: 2em;
+            font-style: italic;
+        }
+        i {
+            font-size: 2.5em;
+            font-family: var(--font1);
+        }
+    }
+    .app-info {
+        font-family: var(--font2);
+        color: var(--text1);
         font-size: larger;
+        div {
+            width: fit-content;
+            padding: 10px;
+            font-family: var(--font1);
+            font-size: large;
+            border-radius: 0.2em;
+            background: var(--popBg);
+            backdrop-filter: var(--bckFiltr);
+            border: 1px solid var(--secondary);
+        }
+    }
+    .msg {
+        font-family: var(--font2);
+        color: var(--text1);
+        #demo {
+            background: radial-gradient(ellipse at center, var(--fluor4) 0%, var(--secondary) 64%, var(--primary) 100%);
+            height:2px;
+            width:100%
+        }
+    }
+    .promo {
+        font-family: var(--font2);
+        color: var(--text1);
+    }
+    .outro {
+        font-family: var(--font1);
+        color: var(--text1);
+        font-size: x-large;
+    }
+    .contact {
+        margin-bottom: 2em;
+        font-family: var(--font2);
+        color: var(--text1);
+        font-size: smaller;
     }
 }
